@@ -1,9 +1,6 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractions.fractionmatcher.view;
 
-import java.awt.Color;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.text.MessageFormat;
 
 import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
@@ -12,10 +9,7 @@ import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.fractions.FractionsResources.Strings;
-import edu.colorado.phet.fractions.common.util.immutable.Vector2D;
 import edu.colorado.phet.fractions.fractionmatcher.model.MatchingGameState;
-import edu.colorado.phet.fractions.fractionmatcher.model.Mode;
-import edu.colorado.phet.fractions.fractionsintro.FractionsIntroSimSharing.Components;
 import edu.umd.cs.piccolo.PNode;
 
 /**
@@ -26,18 +20,9 @@ import edu.umd.cs.piccolo.PNode;
 class ScoreboardNode extends PNode {
 
     //Have to reuse buttons since they are animated outside of our model, and if they got reconstructed on each step, they would never animate nor press
-    private Button newGameButton;
     private static final PhetFont font = new PhetFont( 16, true );
 
-    public ScoreboardNode( final SettableProperty<MatchingGameState> model ) {
-
-        if ( newGameButton == null ) {
-            newGameButton = new Button( Components.newGameButton, Strings.NEW_GAME, Color.yellow, Vector2D.ZERO, new ActionListener() {
-                public void actionPerformed( final ActionEvent e ) {
-                    model.set( model.get().withMode( Mode.CHOOSING_SETTINGS ) );
-                }
-            } );
-        }
+    public ScoreboardNode( Button newGameButton, final SettableProperty<MatchingGameState> model ) {
 
         final PNode optionalTimerValue = model.get().info.timerVisible ? text( MessageFormat.format( Strings.TIME_READOUT__PATTERN, model.get().info.time / 1000L ) ) : new PNode();
         final PNode optionalTimerText = model.get().info.timerVisible ? text( Strings.TIME ) : new PNode();
